<resources>
    <string name="app_name">GradeUnab</string>
    <string name="txtUser">User</string>
    <string name="txtPassword">Password</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtBienvenido">Bienvenido</string>
    <string name="txtApellidosProf">Apellidos:</string>
    <string name="txtNameProf">Nombre:</string>
    <string name="txtIDProf">ID:</string>
    <string name="txtCarreraProf">Carrera:</string>
    <string name="txtSemestreProf">Semestre:</string>
    <string name="txtCorreoProf">Correo:</string>
    <string name="txtCreditos">CREDITOS</string>
    <string name="txtGradeUnab">GRADEUNAB</string>
    <string name="txtAutores">Autores</string>
    <string name="txtAddSub">Añadir Materia</string>
    <string name="txtAdd">Añadir</string>
    <string name="txtAddGrad">Añadir Nota</string>
    <string name="txtGradeName">Nombre de la Nota</string>
    <string name="txtGradePercen">Porcentaje en la Materia</string>
    <string name="txtGradeCal">Calificación</string>
    <string name="txtPlus">+</string>
    <string name="txtPGA">PGA:</string>
    <string name="txtNotas">Notas</string>
    <string name="txtTasks">Tareas</string>
    <string name="txtRecordatorios">Recordatorios</string>
    <string name="txtNameReminder">Nombre del Recordatorio</string>
    <string name="txtTextReminder">Texto del Recordatorio</string>
    <string name="txtAddRemin">Añadir Recordatorio</string>
    <string name="txtResources">Recursos</string>
    <string name="txtBackMenu">Volver a Inicio</string>
</resources>