<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReminderActivity">
    <Button
        android:id="@+id/btnBackCreateReminder"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="35dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/txtAddRemin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/aleo_bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNameRem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_bold"
            android:hint="@string/txtNameReminder"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout15"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTextRem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aleo_bold"
            android:hint="@string/txtTextReminder"
            android:singleLine="false"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAñadirRecordatorio"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txtAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout15"
        android:backgroundTint="@color/cuarto"
        android:textSize="18sp"
        android:fontFamily="@font/aleo_bold"

        />

</androidx.constraintlayout.widget.ConstraintLayout>